kustomize-templates/best-practice-deployment/pod-anti-affinity.patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: NAME
spec:
  template:
    spec:
      affinity:        
        podAntiAffinity:     
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector: 
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - BestPracticeDeployment
              topologyKey: kubernetes.io/hostname
