kustomize-templates/best-practice-deployment/pod-disruption-budget.patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: NAME
spec:
  minAvailable: 4
